changed all instances of ERA A+V to be consistant. Fixed issue with two h1s on subpages. Fixed issue of email cutting off on medium screens.

--- a/app/assets/stylesheets/era_custom.css.scss
+++ b/app/assets/stylesheets/era_custom.css.scss
@@ -1448,6 +1448,18 @@ legend{
 	color:#efefef;
 	background-color:#000;
 }
+.plus-head{
+	font-weight:bold;
+	font-size:110%;
+	font-family:Arial,san-serif;
+}
+.plus{
+	font-size:90%;
+	font-family:Arial,san-serif;
+}
+.t-right{
+	text-align:right;
+}
 
 /* BEGIN STYLES FOR LARGER DEVICES */
 /* Small devices (tablets, 768px and up) */
